HACK! perflock: allow loading precompiled wifi module
Signed-off-by: Dennis Rassmann <showp1984@gmail.com>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -420,5 +420,5 @@ obj-$(CONFIG_ARCH_MSM8960) += mdm2.o mdm_common.o
 obj-$(CONFIG_MSM_RTB) += msm_rtb.o
 obj-$(CONFIG_MSM_CACHE_ERP) += cache_erp.o
 obj-$(CONFIG_MSM_CACHE_DUMP) += msm_cache_dump.o
-obj-$(CONFIG_PERFLOCK) += perflock.o
+obj-y += perflock.o
 obj-y += display/
