--- a/arch/arm/evita_defconfig
+++ b/arch/arm/evita_defconfig
@@ -305,8 +305,8 @@ CONFIG_MSM_RPM=y
 CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
-# CONFIG_PERFLOCK is not set
-# CONFIG_PERFLOCK_BOOT_LOCK is not set
+CONFIG_PERFLOCK=y  	
+CONFIG_PERFLOCK_BOOT_LOCK=y
 # CONFIG_PERFLOCK_SCREEN_POLICY is not set
 
 #
