--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ modules.builtin
 *.gz
 *.bz2
 *.lzma
-*.xz
 *.lzo
 *.patch
 *.gcno
@@ -91,6 +90,13 @@ GPATH
 GRTAGS
 GSYMS
 GTAGS
+
+#specific file output
+arch/arm/boot/compressed/lib1funcs.S
+arch/arm/boot/compressed/ashldi3.S
+arch/arm/boot/compressed/piggy.gzip
+arch/arm/boot/compressed/piggy.xzkern
+arch/arm/boot/compressed/vmlinux
 
 *.orig
 *~
