--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -483,6 +483,10 @@ config TOUCHSCREEN_SYNAPTICS_3K
         depends on I2C
         help
           This enables support for Synaptics RMI4 over I2C based touchscreens.
+          
+config TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE
+        tristate "Sweep2Wake for SYNAPTICS_3k based touchscreens"
+        default y
 
 config TOUCHSCREEN_TOUCHRIGHT
 	tristate "Touchright serial touchscreen"
