arch/arm/mach-msm/ Add: Kconfig flag for cmdline parsing

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2281,6 +2281,16 @@ config ACPU_CUSTOM_FREQ_SUPPORT
 	help
 	  Adds support for custom frequency table adjustments.
 	  
+config CMDLINE_OPTIONS
+	bool "Enable cmdline khz/gov/maxscroff command parsing"
+	default y
+	help
+	  This enables the parsing of maxkhz=<VALUEinKHZ>,
+	  minkhz=<VALUEinKHZ>, governor=<GOVERNOR.NAME> and
+	  maxscroff=<VALUEinKHZ> commands from the kernels cmdline.
+	  This also enables a freq. cap while the screen is off
+	  and gives support for sweep2wake features.
+	  
 config MSM_MPDEC
 	bool "Enable kernel based mpdecision"
 	depends on MSM_SMP
