--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -488,6 +488,16 @@ config TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE
         tristate "Sweep2Wake for SYNAPTICS_3k based touchscreens"
         default y
 
+config TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE_START
+	depends on TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE
+	string "Sweep2Wake start button name"
+	default "BACK"
+
+config TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE_END
+	depends on TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE
+	string "Sweep2Wake start button name"
+	default "MENU"
+        
 config TOUCHSCREEN_TOUCHRIGHT
 	tristate "Touchright serial touchscreen"
 	select SERIO
